--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -55,7 +55,7 @@ highSchool:
       - Promoted conflict resolution strategies within the M-UNHRC framework, showcasing strong communication, negotiation, and leadership skills.
   - location: Xavier Academy
     url: Social Welfare Coordinator
-    date: Sep 2019 - Aug 2022
+    date: 2018 - 2020
     tags: [ cs ]
     info:
       - Engaged with children in orphanages, offering emotional support, educational assistance, and recreational activities to foster a nurturing environment and promote their holistic development.
