--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -105,7 +105,7 @@ languages:
     tags: [ cs ]
 
 technologies:
-  - name: MySQL, Firebase/Firestore
+  - name: MySQL, AWS, Firebase/Firestore
     tags: [ cs ]
   - name: Docker
     tags: [ cs ]
