--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -31,7 +31,16 @@ gapYear:
     tags: [ math, aops ]
     info:
        - Developed a JAVA application featuring an intuitive Graphical User Interface(GUI) to facilitate the encoding and decoding of sixteen ARM7 instructions, accommodating them across a bank of sixteen registers.
-       - Proficiently demonstrated competence in Java programming, including GUI design and event-driven programming, while successfully executing the project.           
+       - Proficiently demonstrated competence in Java programming, including GUI design and event-driven programming, while successfully executing the project.  
+
+ - location: Email Administration Toolkit
+    url: Java, MySQL
+    date: Jul 2023
+    tags: [ math, aops ]
+    info:
+       - Developed an Email Application tailored for IT Support Administrators, automating the creation of email accounts for new hires and enhancing organizational efficiency.
+       - Implemented a backend system with MySQL for user data administration.
+  
 
 highSchool:
   -location: Texas Christian University
