--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -14,13 +14,15 @@ education:
 gapYear:
   - location: Bank Management System
     url: Java, MySQL, SwingUI, Spring Boot
+    date: "Feb 2024 - Mar 2024"
     tags: [ cs ]
     info:
       - Designed intuitive Swing UI for efficient administration.
       - Implemented MySQL for reliable data storage, using advanced database administration procedures to ensure the confidentiality of data.
  
   - location: Portfolio Website
-    url: React, ReactJS, NextJS, Chakra-UI, AWS, CSS, LaTeX
+    url: React, ReactJS, NextJS, Chakra-UI, CSS, LaTeX
+    date: Jan 2024 - Present
     tags: [ math, aops ]
     info:
        - Implemented responsive design principles to ensure optimal viewing experience across various devices, enhancing accessibility and user engagement.
@@ -28,29 +30,21 @@ gapYear:
        
   - location: ARM Machines Instructions
     url: Java, Git, SwingUI, VS Code
+    date: Nov 2023
     tags: [ math, aops ]
     info:
        - Developed a JAVA application featuring an intuitive Graphical User Interface(GUI) to facilitate the encoding and decoding of sixteen ARM7 instructions, accommodating them across a bank of sixteen registers.
-       - Proficiently demonstrated competence in Java programming, including GUI design and event-driven programming, while successfully executing the project.  
+       - Proficiently demonstrated competence in Java programming, including GUI design and event-driven programming, while successfully executing the project.           
 
- - location: Email Administration Toolkit
+  - location: Email Administration Toolkit
     url: Java, MySQL
     date: Jul 2023
     tags: [ math, aops ]
     info:
        - Developed an Email Application tailored for IT Support Administrators, automating the creation of email accounts for new hires and enhancing organizational efficiency.
        - Implemented a backend system with MySQL for user data administration.
-  
 
 highSchool:
-  - location: Texas Christian University
-    url: Student Assistant
-    date: April 2024 - Present
-    tags: [ cs ]
-    info:
-       - Conducting comprehensive research using online resources and established databases, ensuring thorough data collection and entry to support academic and administrative projects.
-       - Maintaining strict confidentiality while managing sensitive information, and proficiently handled logistical tasks including ordering supplies to support office operations.
-       
   - location: United Nations Human Rights Council
     url: Outstanding Delegate
     date: Sept 2021
@@ -59,7 +53,13 @@ highSchool:
       - Conducted in-depth research and analysis on human rights crises in the Middle East, contributing to informed discussions and resolutions within the UNHRC.
       - Engaged in diplomatic negotiations and proposed effective solutions aimed at addressing human rights violations.
       - Promoted conflict resolution strategies within the M-UNHRC framework, showcasing strong communication, negotiation, and leadership skills.
-
+  - location: Xavier Academy
+    url: Social Welfare Coordinator
+    date: Sep 2019 - Aug 2022
+    tags: [ cs ]
+    info:
+      - Engaged with children in orphanages, offering emotional support, educational assistance, and recreational activities to foster a nurturing environment and promote their holistic development.
+      - Supported senior citizens in old-aged homes through companionship and recreational activities, enhancing their well-being.
 projects:
   - location: Robotics and Artificial Intelligence Club
     date: Dec 2023 - Present
@@ -67,6 +67,8 @@ projects:
     date: Jan 2024 - Present
   - location: Computer Science Society
     date: Jan 2024 - Present
+  - location: South Asian Inter-Cultural Association
+    date: Feb 2024 - Present
 
 awards:
   - name: US Congressional App Challenge Winners
@@ -109,7 +111,7 @@ languages:
     tags: [ cs ]
 
 technologies:
-  - name: MySQL, AWS, Firebase/Firestore
+  - name: MySQL, Firebase/Firestore
     tags: [ cs ]
   - name: Docker
     tags: [ cs ]
