--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -8,7 +8,7 @@ education:
     date: ""
     url: "B.S. in Computer Science & Mathematics"
     info:
-      - "**GPA: 3.75/4.0**"
+      - "**GPA: 3.63/4.0**"
       - "**Deans Scholarship, Dean's List**"
 
 gapYear:
@@ -41,21 +41,29 @@ gapYear:
        - Implemented a backend system with MySQL for user data administration.
 
 highSchool:
+ - location: Texas Christian University
+    url: Teaching Assistant
+    date: Sept 2024 - Present
+    tags: [ cs ]
+    info:
+      - Grader for Cloud Computing course with a focus on AWS Cloud Foundations.
+      - Providing detailed evaluations and feedback on student assignments covering cloud concepts, AWS core services, security, architecture, pricing, and support. 
+      - Assisting classes of 30-50 students answering questions, guiding students, and helping debug.
+ - location: TCU University Advancement
+    url: Research Assistant
+    date: Apr 2024 - Present
+    tags: [ cs ]
+    info:
+      - Grader for Cloud Computing course with a focus on AWS Cloud Foundations.
+      - Providing detailed evaluations and feedback on student assignments covering cloud concepts, AWS core services, security, architecture, pricing, and support. 
+      - Assisting classes of 30-50 students answering questions, guiding students, and helping debug.    
   - location: United Nations Human Rights Council
     url: Outstanding Delegate
     date: Sept 2021
     tags: [ cs ]
     info:
-      - Conducted in-depth research and analysis on human rights crises in the Middle East, contributing to informed discussions and resolutions within the UNHRC.
-      - Engaged in diplomatic negotiations and proposed effective solutions aimed at addressing human rights violations.
-      - Promoted conflict resolution strategies within the M-UNHRC framework, showcasing strong communication, negotiation, and leadership skills.
-  - location: Xavier Academy
-    url: Social Welfare Coordinator
-    date: Sep 2019 - Aug 2022
-    tags: [ cs ]
-    info:
-      - Engaged with children in orphanages, offering emotional support, educational assistance, and recreational activities to foster a nurturing environment and promote their holistic development.
-      - Supported senior citizens in old-aged homes through companionship and recreational activities, enhancing their well-being.
+      - Conducting comprehensive research using online resources and established databases, ensuring thorough data collection and entry to support academic and administrative projects.
+      - Maintaining strict confidentiality with sensitive data and efficiently managing data to support office operations.
 projects:
   - location: Robotics and Artificial Intelligence Club
     date: Dec 2023 - Present
@@ -87,6 +95,8 @@ awards:
     tags: [ misc ]
 
 languages:
+  - name: C#
+    tags: [ cs ]
   - name: Java
     tags: [ cs ]
   - name: C/C++
@@ -95,9 +105,7 @@ languages:
     tags: [ cs ]
   - name: JavaScript
     tags: [ cs ]
-  - name: Rest API
-    tags: [ cs ]
-  - name: React, React Native
+  - name: React
     tags: [ cs ]
   - name: NodeJS
     tags: [ cs ]
@@ -107,9 +115,9 @@ languages:
     tags: [ cs ]
 
 technologies:
-  - name: MySQL, Firebase/Firestore
+  - name: .NET, MySQL, MSSQL
     tags: [ cs ]
-  - name: Docker
+  - name: Docker, Google Cloud Platform
     tags: [ cs ]
-  - name: Git/Github
+  - name: MongoDB, Git/Github
     tags: [ cs ]
