--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -8,13 +8,21 @@ education:
     date: ""
     url: "B.S. in Computer Science & Mathematics"
     info:
-      - "**GPA: 3.75/4.0**"
+      - "**GPA: 3.63/4.0**"
       - "**Deans Scholarship, Dean's List**"
 
 gapYear:
+  - location: Personal Task Manager
+    url: C#, .NET, MySQL, Zapier, Trello
+   # date: Jul 2023 
+    tags: [ math, aops ]
+    info:
+       - Developed a Personal Task Management System using C#, integrated with Trello API for task automation, and managed CRUD operations with MySQL database.
+       - Automated task creation via Zapier integration, implemented robust error handling, logging for reliable task tracking, and managed project version control using Git and GitHub.
+
   - location: Bank Management System
     url: Java, MySQL, SwingUI, Spring Boot
-    date: "Feb 2024 - Mar 2024"
+  #  date: "Feb 2024 - Mar 2024"
     tags: [ cs ]
     info:
       - Designed intuitive Swing UI for efficient administration.
@@ -22,7 +30,7 @@ gapYear:
  
   - location: Portfolio Website
     url: React, ReactJS, NextJS, Chakra-UI, CSS, LaTeX
-    date: Jan 2024 - Present
+  #  date: Jan 2024 - Present
     tags: [ math, aops ]
     info:
        - Implemented responsive design principles to ensure optimal viewing experience across various devices, enhancing accessibility and user engagement.
@@ -30,36 +38,33 @@ gapYear:
        
   - location: ARM Machines Instructions
     url: Java, Git, SwingUI, VS Code
-    date: Nov 2023
+   # date: Nov 2023
     tags: [ math, aops ]
     info:
        - Developed a JAVA application featuring an intuitive Graphical User Interface(GUI) to facilitate the encoding and decoding of sixteen ARM7 instructions, accommodating them across a bank of sixteen registers.
        - Proficiently demonstrated competence in Java programming, including GUI design and event-driven programming, while successfully executing the project.           
 
-  - location: Email Administration Toolkit
-    url: Java, MySQL
-    date: Jul 2023
-    tags: [ math, aops ]
-    info:
-       - Developed an Email Application tailored for IT Support Administrators, automating the creation of email accounts for new hires and enhancing organizational efficiency.
-       - Implemented a backend system with MySQL for user data administration.
-
 highSchool:
-  - location: United Nations Human Rights Council
-    url: Outstanding Delegate
-    date: Sept 2021
+  - location: Ampcare LLC
+    url: Incoming Software Engineer Intern
+    date: Sept 2024 - Dec 2024
     tags: [ cs ]
     info:
-      - Conducted in-depth research and analysis on human rights crises in the Middle East, contributing to informed discussions and resolutions within the UNHRC.
-      - Engaged in diplomatic negotiations and proposed effective solutions aimed at addressing human rights violations.
-      - Promoted conflict resolution strategies within the M-UNHRC framework, showcasing strong communication, negotiation, and leadership skills.
-  - location: Xavier Academy
-    url: Social Welfare Coordinator
-    date: Sep 2019 - Aug 2022
+      - Anticipating hands-on experience in software development, gaining exposure to corporate environments and contributing to impactful projects.
+  - location: Texas Christian University
+    url: Teaching Assistant
+    date: Sep 2024 - Present
     tags: [ cs ]
     info:
-      - Engaged with children in orphanages, offering emotional support, educational assistance, and recreational activities to foster a nurturing environment and promote their holistic development.
-      - Supported senior citizens in old-aged homes through companionship and recreational activities, enhancing their well-being.
+      - Grader for Cloud Computing course with a focus on AWS Cloud Foundations while assisting clases of 30-50 students answering questions, guiding students, and helping debug.
+      - Providing detailed evaluations and feedback on student assignments covering cloud concepts, AWS core services, security, architecture, pricing, and support.
+  - location: TCU University Advancement
+    url: Research Assistant
+    date: May 2024 - Present
+    tags: [ cs ]
+    info:
+      - Conducting comprehensive research using online resources and established databases, ensuring thorough data collection and entry to support academic and administrative projects.
+      - Maintaining strict confidentiality with sensitive data and efficiently managing data to support office operations.    
 projects:
   - location: Robotics and Artificial Intelligence Club
     date: Dec 2023 - Present
@@ -67,8 +72,8 @@ projects:
     date: Jan 2024 - Present
   - location: Computer Science Society
     date: Jan 2024 - Present
-  - location: South Asian Inter-Cultural Association
-    date: Feb 2024 - Present
+#  - location: South Asian Inter-Cultural Association
+#    date: Feb 2024 - Present
 
 awards:
   - name: US Congressional App Challenge Winners
@@ -91,6 +96,8 @@ awards:
     tags: [ misc ]
 
 languages:
+  - name: C#
+    tags: [ cs ]
   - name: Java
     tags: [ cs ]
   - name: C/C++
@@ -98,10 +105,6 @@ languages:
   - name: Python
     tags: [ cs ]
   - name: JavaScript
-    tags: [ cs ]
-  - name: Rest API
-    tags: [ cs ]
-  - name: React, React Native
     tags: [ cs ]
   - name: NodeJS
     tags: [ cs ]
@@ -111,10 +114,9 @@ languages:
     tags: [ cs ]
 
 technologies:
-  - name: MySQL, Firebase/Firestore
+  - name: .NET, MongoDB, Zapier, MySQL, Google Cloud Platfrom
     tags: [ cs ]
-  - name: Docker
+  - name: MSSQL, Amazon Web Services, Docker
     tags: [ cs ]
   - name: Git/Github
     tags: [ cs ]
-
