Work experience update

--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -50,7 +50,8 @@ highSchool:
     date: Sept 2024 - Dec 2024
     tags: [ cs ]
     info:
-      - Anticipating hands-on experience in software development, gaining exposure to corporate environments and contributing to impactful projects.
+      - Developing and deploying automation workflows, directly contributing to a projected $1 million in sales by streamlining customer acquisition and engagement processes.
+      - Integrating third-party APIs with custom automation tools to drive superior operational performance by reducing manual tasks by 30% and increasing lead development and follow-up efficiency.
   - location: Texas Christian University
     url: Teaching Assistant
     date: Sep 2024 - Present
