--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -46,7 +46,7 @@ gapYear:
 
 highSchool:
   - location: Ampcare LLC
-    url: Incoming Software Engineer Intern
+    url: Software Engineer Intern
     date: Sept 2024 - Dec 2024
     tags: [ cs ]
     info:
