--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -45,6 +45,13 @@ gapYear:
        - Proficiently demonstrated competence in Java programming, including GUI design and event-driven programming, while successfully executing the project.           
 
 highSchool:
+  - location: TCU College of Science and Engineering
+    url: AI Researcher
+    date: Jan 2025 - Present
+    tags: [ cs ]
+    info:
+      - Designing and implementing machine learning models to enhance cybersecurity systems, leveraging frameworks such as TensorFlow and PyTorch.
+      - Conducting research on AI-driven cybersecurity applications, collaborating on the development of tools and datasets for advanced threat detection.    
   - location: Ampcare LLC
     url: Software Engineer Intern
     date: Sept 2024 - Dec 2024
@@ -59,13 +66,7 @@ highSchool:
     info:
       - Grader for Cloud Computing course with a focus on AWS Cloud Foundations while assisting clases of 30-50 students answering questions, guiding students, and helping debug.
       - Providing detailed evaluations and feedback on student assignments covering cloud concepts, AWS core services, security, architecture, pricing, and support.
-  - location: TCU University Advancement
-    url: Research Assistant
-    date: May 2024 - Present
-    tags: [ cs ]
-    info:
-      - Conducting comprehensive research using online resources and established databases, ensuring thorough data collection and entry to support academic and administrative projects.
-      - Maintaining strict confidentiality with sensitive data and efficiently managing data to support office operations.    
+
 projects:
   - location: Robotics and Artificial Intelligence Club
     date: Dec 2023 - Present
